--- a/07-accesible-form-ui/styles.css
+++ b/07-accesible-form-ui/styles.css
@@ -1,17 +1,68 @@
+body {
+  display: flex;
+  width: 500px;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 10px;
+  border: black 1px solid;
+}
+
+
 div.form-container {
   border: 2px solid red;
+  display: flex;
+  width: 400px;
+  justify-content: center;
 }
 
 div.form-group {
   border: 2px solid green;
+  margin-top: 5x;
+  margin-bottom: 5px;
+
+  
 }
 
 div.passowrd-group {
   border: 2px solid blue;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+button.show-password-btn {
+    border: 2px solid black;
+    width: 20px;
+    height: 20px;
+}
+
+button.submit-btn {
+    border: 2px solid black;
+    width: 100px;
+    height: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+input {
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+}
+
+label {
+    display: block;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 div.profile-completeness {
   border: 2px solid orange;
+  display: flex;
+  width: 400px;
 }
 
 div.progress-container {
@@ -20,15 +71,6 @@ div.progress-container {
 
 div.list-container {
   border: 2px solid teal;
+
 }
 
-button {
-    border: 2px solid black;
-    width: 20px;
-    height: 20px;
-}
-
-img {
-    width: 100%;
-    height: 100%;
-}
